# activator

./: .gitignore  CMakeLists.txt  main.cpp
qml/: Main.qml
src/: licensegenerator.cpp  licensegenerator.h
